# IRRA

./: .env  .env.example  .gitignore  AGENTS.md  README.md  build_engine.sh  docker-compose.yaml  export_onnx.sh  export_onnx_cuhk.py  export_onnx_icfg.py  export_onnx_rstp.py  pyproject.toml  run_irra.sh  run_rstpreid.sh  sugarcrepe-pedes.py
configs/: sugarcrepe_cuhk_pedes.yaml  sugarcrepe_icfg_pedes.yaml  sugarcrepe_rstpreid.yaml  text_to_image_retrieval_cuhk_pedes.yaml  text_to_image_retrieval_icfg_pedes.yaml  text_to_image_retrieval_rstpreid.yaml
env/: .env.example
model_repository/irra_cuhk_image_encoder/: config.pbtxt
model_repository/irra_cuhk_text_encoder/: config.pbtxt
model_repository/irra_icfg_image_encoder/: config.pbtxt
model_repository/irra_icfg_text_encoder/: config.pbtxt
model_repository/irra_rstp_image_encoder/: config.pbtxt
model_repository/irra_rstp_text_encoder/: config.pbtxt
processor/: processor.py
script/: deploy_models.py
shell/: sugarcrepe_all.sh  train_cuhk_pedes.sh  train_icfg_pedes.sh  train_rstpreid.sh
utils/: options.py
