[project]
name = "irra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "easydict>=1.13",
    "onnx>=1.17.0",
    "prettytable>=3.11.0",
    "pyyaml>=6.0.3",
    "torch==1.13.1",
    "torchvision>=0.14.1",
    "tqdm>=4.67.1",
]
